--- a/blog/templates/blog/article/includes/content_area.html
+++ b/blog/templates/blog/article/includes/content_area.html
@@ -2,33 +2,29 @@
 
 <div class="blog-detail-title">
     <div class="item-img">
-        <img src="{% static 'general/base/img/blog/blog13.jpg' %}" class="img-fluid" alt="blog">
-        <div class="post-date">20
-            <span>June</span>
+        <img src="{{ article.main_image.url }}" style="widht: 963px; height: 474px; object-fit: cover; object-position: center;" class="img-fluid" alt="blog">
+        <div class="post-date">{{ article.updated | date:"j"}}
+            <span>{{ article.updated | date:"F"}}</span>
         </div>
     </div>
     <div class="item-content">
-        <h2 class="item-title">
-            My dental office blo aret are building a healthy and cousderty cmunity one
-            individual at a timeveniam quis laore nostrud.
-        </h2>
+        <h2 class="item-title">{{ article.title }}</h2>
         <div class="post-actions-wrapper">
             <ul>
                 <li>
-                    <a href="#"><i class="flaticon-people"></i>by <span>admin</span></a>
+                    <a href="#">
+                    <i class="flaticon-people"></i>Müəllif: <span>Dr. {{ article.doctor.name }}</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="flaticon-tag"></i>by <span>Mdical, Care</span></a>
-                </li>
-                <li>
-                    <a href="#"><i class="flaticon-interface"></i>15</a>
+                    <a href="#"><i class="flaticon-tag"></i>Kateqoriya: <span>{{ article.category.name }}</span></a>
                 </li>
             </ul>
         </div>
     </div>
 </div>
 <div class="blog-content">
-    <p>Fummy text of the prnting and type news seting industrs standard known prin
+    {{ article.content | safe }}
+    {% comment %} <p>Fummy text of the prnting and type news seting industrs standard known prin
         aretertook a printing and typenews galley type.Ut wisi enim ad minim veniam, quis
         laore nostrud exerci tation ulm hedi corper turet ipsum Morbi accumsan ipsum velit.
         Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
@@ -43,5 +39,5 @@
         laore nostrud exerci tation ulm hedi corper turet ipsum Morbi accumsan ipsum velit.
         Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
         consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per
-        conubia nostra.</p>
+        conubia nostra.</p> {% endcomment %}
 </div>
