--- a/doctor/templates/doctor/doctor_detail/includes/article_area.html
+++ b/doctor/templates/doctor/doctor_detail/includes/article_area.html
@@ -1,7 +1,4 @@
 <div class="single-item">
-    <h3 class="section-title title-bar-primary2">About Me:</h3>
-    <p>Efficiently myocardinate market-driven innovation via open-source alignments.
-        Dramatically engage high-Phosfluorescently expedite impactful supply chains via
-        focused results. Holistically . Compellingly supply just in time catalysts for
-        change through..</p>
+    <h3 class="section-title title-bar-primary2">Həkim Haqqında</h3>
+    <p>{{ doctor.about | safe }}</p>
 </div>
