--- a/doctor/templates/doctor/doctor_detail/includes/description_area.html
+++ b/doctor/templates/doctor/doctor_detail/includes/description_area.html
@@ -1,10 +1,14 @@
 {% load static %}
 
 <div class="widget widget-about-team">
-    <img src="{% static 'general/base/img/team/team20.png' %}" class="img-fluid" alt="team">
+    <img 
+        src="{{ doctor.image.url }}"
+        style="width: 271px; height: 300px; object-fit: cover; object-positon: top;"
+        class="img-fluid" 
+        alt="team">
     <div class="item-content">
-        <h3 class="item-title">Dr.Zinia Zara</h3>
-        <p class="item-ctg">Cardiology</p>
-        <span class="item-designation">MBBS, M.D of Medicine</span>
+        <h3 class="item-title">Dr. {{ doctor.name }}</h3>
+        <p class="item-ctg">{{ doctor.profession }}</p>
+        <span class="item-designation">{{ doctor.degree }}</span>
     </div>
 </div>
